--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 Change '/' to File.separator
 Change strings "v_" & "c_" to final variables
 MangaDowloadService.java [L190] Change the try clause 
+Add download duration per chapter
