--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@ Change '/' to File.separator
 Change strings "v_" & "c_" to final variables
 MangaDowloadService.java [L190] Change the try clause 
 Add download duration per chapter
+Review the image download process
